@@ -7,6 +7,7 @@ Version 16.2.x (v16-fixes)
   selected multiple times in quick succession.
 * Current file name was not cleared and button New Game not enabled
   after opening a file from clipboard.
+* Comment scrolling did not always work.
 * Avoid jumping of splashscreen icon on Android.
 * Shared MIME Info was missing a pattern for detecting Classic 3-player
   game files independent of the file extension.
